--- a/08.WebStandard/index.html
+++ b/08.WebStandard/index.html
@@ -28,8 +28,20 @@
 
     <div id="wrap">
         <header id="header">
-            <div class="container">header</div>
+            <div class="container">
+                <div class="header">
+                    <div class="header__menu">
+                        <a href="./index.html">Desinger</a>
+                        <a href="./index.html">Publisher</a>
+                        <a href="./index.html">Youtube</a>
+                    </div>
+                    <!-- //header__menu -->
+                    <div class="header__title"></div>
+                    <div class="header__icon"></div>
+                </div>
+            </div>
         </header>
+        <!-- //header -->
 
         <main id="contents">
             <div id="contents__nav">
