헤더타이틀&웹폰트 진행

--- a/08.WebStandard/index.html
+++ b/08.WebStandard/index.html
@@ -14,6 +14,11 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
 
+    <!-- WEB Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <!-- SKIP NAV -->
@@ -36,7 +41,11 @@
                         <a href="./index.html">Youtube</a>
                     </div>
                     <!-- //header__menu -->
-                    <div class="header__title"></div>
+                    <div class="header__title">
+                        <h1>웹스토리보이님 영상 따라만들기</h1><br>
+                        <a href="index.html">홈페이지</a>
+                    </div>
+                    <!-- //header__title -->
                     <div class="header__icon"></div>
                 </div>
             </div>
