--- a/08.WebStandard/index.html
+++ b/08.WebStandard/index.html
@@ -46,7 +46,27 @@
                         <a href="index.html">홈페이지</a>
                     </div>
                     <!-- //header__title -->
-                    <div class="header__icon"></div>
+
+                    <!-- 이미지를 표현하는 방법
+                            1. HTML img태그 이용
+                               a. 의미있는 이미지 사용 시
+                               b. alt속성으로 대체텍스트 제공
+
+                            2. CSS background속성 이용
+                               a. 의미없는 이미지 사용(단순 꾸미기)
+                               b. 대체텍스트 미제공
+                            
+                            3. CSS bacgrond속성 이용하되 의미 있는 이미지 사용
+                               a. 웹 표준 준수를 위해 ImageSprite기법, IR(imageReplacement) 이용
+                               b. 이미지스프라이트 사용 시 유지보수 쉬우며, image 용량 많이 줄여짐
+                            -->
+                    <div class="header__icon">
+                        <a href="#" class="icon1"><span class="ir_pharkMethod">icon1</span></a>
+                        <a href="#" class="icon2"><span class="ir_pharkMethod">icon2</span></a>
+                        <a href="#" class="icon3"><span class="ir_pharkMethod">icon3</span></a>
+                        <a href="#" class="icon4"><span class="ir_pharkMethod">icon4</span></a>
+                    </div>
+                    <!-- //header__icon -->
                 </div>
             </div>
         </header>
