proceed with 15th lecture of 'Webstoryboy'

--- a/08.WebStandard/index.html
+++ b/08.WebStandard/index.html
@@ -14,10 +14,12 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
 
-    <!-- WEB Fonts -->
+    <!-- WEB Fonts 1 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
+    <!-- WEB Fonts 2  -->
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Brush+Script&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -132,7 +134,12 @@
             </div>
             <!-- //contents__nav -->
             <div id="contents__title">
-                <div class="container">contents__title</div>
+                <div class="container">
+                    <div class="title">
+                        <h2>"나는 공부중이다"</h2>
+                        <a href="#" class="btn"><span class="ir_pharkMethod">전체메뉴</span></a>
+                    </div>
+                </div>
             </div>
             <!-- //contents__title -->
             <div id="contents__banner">
