--- a/08.WebStandard/index.html
+++ b/08.WebStandard/index.html
@@ -236,6 +236,62 @@
                         <div class="column col3">
                             <h3><span class="icon_img ir_screenOut">아이콘</span><span class="icon_title">Notice</span></h3>
                             <p class="icon_description">웹 페이지에서 가장 기본이 되는 게시판 유형입니다.</p>
+                            <!-- 게시판4 hover효과-->
+                            <div class="notice__hover">
+                                <h4>Mouse Hover</h4>
+                                <ul>
+                                    <li>
+                                        <a href="#">
+                                            <span><img src="img/sban01.jpg" alt="이미지1">
+                                                <em>바로가기</em></span>
+                                            <strong>와이어 프레임</strong>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <span><img src="img/sban02.jpg" alt="이미지2">
+                                                <em>바로가기</em></span>
+                                            <strong>스케치 작업</strong>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <span><img src="img/sban03.jpg" alt="이미지3">
+                                                <em>바로가기</em></span>
+                                            <strong>UI 디자인</strong>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <!-- //게시판4 -->
+                            <!-- 게시판4 hover효과2-->
+                            <div class="notice__hover">
+                                <h4 class="ir_screenOut">Mouse Hover</h4>
+                                <ul>
+                                    <li>
+                                        <a href="#">
+                                            <span><img src="img/sban04.jpg" alt="이미지4">
+                                                <em>바로가기</em></span>
+                                            <strong>HTML</strong>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <span><img src="img/sban05.jpg" alt="이미지5">
+                                                <em>바로가기</em></span>
+                                            <strong>CSS</strong>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <span><img src="img/sban06.jpg" alt="이미지6">
+                                                <em>바로가기</em></span>
+                                            <strong>jQuery</strong>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <!-- //게시판4 -->
                         </div>
                         <!-- //col3 -->
                         
