proceed with 22th lecture of 'Webstoryboy'

--- a/08.WebStandard/index.html
+++ b/08.WebStandard/index.html
@@ -251,7 +251,7 @@
                                         <a href="#">
                                             <span><img src="img/sban02.jpg" alt="이미지2">
                                                 <em>바로가기</em></span>
-                                            <strong>스케치 작업</strong>
+                                            <strong>스케치 작업</strong> 
                                         </a>
                                     </li>
                                     <li>
@@ -265,7 +265,7 @@
                             </div>
                             <!-- //게시판4 -->
                             <!-- 게시판4 hover효과2-->
-                            <div class="notice__hover">
+                            <div class="notice__hover2">
                                 <h4 class="ir_screenOut">Mouse Hover</h4>
                                 <ul>
                                     <li>
@@ -277,9 +277,9 @@
                                     </li>
                                     <li>
                                         <a href="#">
-                                            <span><img src="img/sban05.jpg" alt="이미지5">
+                                            <span><img src="img/sban05.jpg" alt="이미지5"> 
                                                 <em>바로가기</em></span>
-                                            <strong>CSS</strong>
+                                            <strong>CSS</strong> 
                                         </a>
                                     </li>
                                     <li>
