--- a/08.WebStandard/index.html
+++ b/08.WebStandard/index.html
@@ -264,7 +264,7 @@
                                 </ul>
                             </div>
                             <!-- //게시판4 -->
-                            <!-- 게시판4 hover효과2-->
+                            <!-- 게시판5 hover효과2-->
                             <div class="notice__hover2">
                                 <h4 class="ir_screenOut">Mouse Hover</h4>
                                 <ul>
@@ -291,13 +291,44 @@
                                     </li>
                                 </ul>
                             </div>
-                            <!-- //게시판4 -->
+                            <!-- //게시판5 -->
                         </div>
                         <!-- //col3 -->
                         
                         <div class="column col4">
                             <h3><span class="icon_img ir_screenOut">아이콘</span><span class="icon_title">Notice</span></h3>
                             <p class="icon_description">웹 페이지에서 가장 기본이 되는 게시판 유형입니다.</p>
+                            <!-- 탭메뉴 -->
+                            <div class="tabMenu">
+                                <h4 class="ir_screenOut">탭메뉴 제목</h4>
+                                <ul class="tabMenu__list">
+                                    <li class="active">
+                                        <a href="#">공지사항1</a>
+                                        <ul class="tabMenu__notice">
+                                            <li><a href="#">첫 번째 공지사항 탭 메뉴 테스트 목록입니다. 첫 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
+                                            <li><a href="#">첫 번째 공지사항 탭 메뉴 테스트 목록입니다. 첫 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
+                                            <li><a href="#">첫 번째 공지사항 탭 메뉴 테스트 목록입니다. 첫 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a href="#">공지사항2</a>
+                                        <ul class="tabMenu__notice" style="display: none;">
+                                            <li><a href="#">두 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
+                                            <li><a href="#">두 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
+                                            <li><a href="#">두 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a href="#">공지사항3</a>
+                                        <ul class="tabMenu__notice" style="display: none;">
+                                            <li><a href="#">세 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
+                                            <li><a href="#">세 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
+                                            <li><a href="#">세 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </div>
+                            <!-- //탭메뉴 -->
                         </div>
                         <!-- //col4 -->
                         
