--- a/08.WebStandard/index.html
+++ b/08.WebStandard/index.html
@@ -329,6 +329,28 @@
                                 </ul>
                             </div>
                             <!-- //탭메뉴 -->
+
+                            <!-- recentNotice -->
+                            <div class="recentNotice">
+                                <h4>최신 <em>공지사항</em></h4>
+                                <ul>
+                                    <li>
+                                        <a href="">웹디자이너와 웹퍼블리셔의 차이점은 무엇인가요?</a>
+                                        <span>2022.03.24</span>
+                                    </li>
+                                    <li>
+                                        <a href="">웹디자이너와 웹퍼블리셔의 차이점은 무엇인가요?</a>
+                                        <span>2022.03.24</span>
+                                    </li>
+                                    <li>
+                                        <a href="">웹디자이너와 웹퍼블리셔의 차이점은 무엇인가요?</a>
+                                        <span>2022.03.24</span>
+                                    </li>
+                                </ul>
+                                <a href="#" class="more" title="더보기">더보기</a>
+                            </div>
+                            <!-- //recentNotice -->
+
                         </div>
                         <!-- //col4 -->
                         
