proceed with 25th lecture of 'Webstoryboy'

--- a/08.WebStandard/index.html
+++ b/08.WebStandard/index.html
@@ -357,6 +357,28 @@
                         <div class="column col5">
                             <h3><span class="icon_img ir_screenOut">아이콘</span><span class="icon_title">Notice</span></h3>
                             <p class="icon_description">웹 페이지에서 가장 기본이 되는 게시판 유형입니다.</p>
+                            <!-- 갤러리 -->
+                            <div class="gallery">
+                                <h4 class="gallery__header">포트폴리오</h4> 
+                                <div class="gallery__btn">
+                                    <ul class="gallery__btn--list">
+                                        <li class="gallery__btn--sort"><a class="gallery__btn--link gallery__btn--play" href="#"><span class="ir_screenOut">시작</span></a></li>
+                                        <li class="gallery__btn--sort"><a class="gallery__btn--link gallery__btn--stop" href="#"><span class="ir_screenOut">정지</span></a></li>
+                                        <li class="gallery__btn--sort"><a class="gallery__btn--link gallery__btn--prev" href="#"><span class="ir_screenOut">이전이미지</span></a></li>
+                                        <li class="gallery__btn--sort"><a class="gallery__btn--link gallery__btn--next" href="#"><span class="ir_screenOut">다음이미지</span></a></li>
+                                    </ul>
+                                </div>
+                                <div class="gallery__img">
+                                    <ul>
+                                        <li><a href="#"><img src="./img/gallery01.jpg" alt="이미지1"></a></li>
+                                        <li><a href="#"><img src="./img/gallery02.jpg" alt="이미지2"></a></li>
+                                        <li><a href="#"><img src="./img/gallery03.jpg" alt="이미지3"></a></li>
+                                        <li><a href="#"><img src="./img/gallery04.jpg" alt="이미지4"></a></li>
+                                        <li><a href="#"><img src="./img/gallery05.jpg" alt="이미지5"></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <!-- //갤러리 -->
                         </div>
                         <!-- //col5 -->
                         
