--- a/08.WebStandard/index.html
+++ b/08.WebStandard/index.html
@@ -385,6 +385,55 @@
                         <div class="column col6">
                             <h3><span class="icon_img ir_screenOut">아이콘</span><span class="icon_title">Notice</span></h3>
                             <p class="icon_description">웹 페이지에서 가장 기본이 되는 게시판 유형입니다.</p>
+                            <!-- 로그인영역 -->
+                            <div id="login">
+                                <h4 class="ir_screenOut">로그인 정보</h4>
+                                <form id="login__form" name="login-form" action="post">
+                                    <fieldset>
+                                        <legend class="ir_screenOut">로그인 및 관련 설정</legend>
+                                        <div class="login__header">
+                                            <h5 class="ir_screenOut">로그인 보안</h5>
+                                            <!-- 로그인 체크박스 -->
+                                            <div class="loginHeader__check">
+                                                <input id="lnfor-check" type="checkbox" class="input-check">
+                                                <label for="lnfor-check"> 로그인상태 유지</label>
+                                            </div>
+                                            <!-- //로그인 체크박스 -->
+                                            <div class="loginHeader__ip">
+                                                IP보안 <em>ON</em>
+                                            </div>
+                                        </div>
+                                        <div class="login__content">
+                                            <h5 class="ir_screenOut">로그인 영역</h5>
+                                            <div class="loginContent__text">
+                                                <label for="uid" class="ir_screenOut">아이디</label>
+                                                <input type="text" id="uid" name="uid" class="input-text" maxlength="20">
+                                                <label for="upw" class="ir_screenOut">비밀번호</label>
+                                                <input type="password" id="upw" name="upw" class="input-text" maxlength="20">
+                                            </div>
+                                            <button class="loginContent__btn" type="submit">로그인</button>
+                                        </div>
+                                        <div class="login__footer">
+                                            <h5 class="ir_screenOut">로그인 문제해결</h5>
+                                            <ul>
+                                                <li><a href="#"><strong>회원가입</strong></a>/</li>
+                                                <li><a href="#">아이디</a>&middot;<a href="#">비밀번호</a>찾기</li>
+                                            </ul>
+                                        </div>
+                                    </fieldset>
+                                </form>
+                            </div>
+                            <!-- //로그인영역 -->
+                            <!-- 팝업광고영역 -->
+                            <div class="popup">
+                                <h4 class="popup__header">Advertisement</h4>
+                                <ul class="popup__banner">
+                                    <li><a href="#"><img src="./img/sban07.jpg" alt="광고배너1"></a></li>
+                                    <li><a href="#"><img src="./img/sban08.jpg" alt="광고배너2"></a></li>
+                                    <li class="last"><a href="#"><img src="./img/sban09.jpg" alt="광고배너3"></a></li>
+                                </ul>
+                            </div>
+                            <!-- //팝업광고영역 -->
                         </div>
                         <!-- //col6 -->
                     </div>
